# services/users/src/main/scala/api/dto/response/LoginResponseDTO.scala
@@ -1,7 +1,7 @@
-package api.dto
+package api.dto.response
 
-import api.dto.AccountDTO
-import api.dto.ProfileDTO
+import api.dto.response.AccountDTO
+import api.dto.response.ProfileDTO
 import io.circe.Encoder
 import io.circe.generic.semiauto._
 
