# services/users/src/main/scala/api/dto/response/UserDTO.scala
@@ -1,5 +1,6 @@
-package api.dto
+package api.dto.response
 
+import api.dto.response.ProfileDTO
 import io.circe.Encoder
 import io.circe.generic.semiauto._
 
